[package]
name = "crypto-app"
version = "0.1.0"
edition = "2024"

[features]
test-iterations = []
[profile.test]
features = ["test-iterations"]
[dependencies]

tar = "0.4.44"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8.3"
walkdir = "2.5"
tempfile = "3.19"
hex-literal="1.0.0"
nistrs="0.1.2"
arrayref = "0.3.7"
 rayon = "1.5"
 parking_lot = "0.12"
 cfg-if = "1.0"
 getrandom= "0.2"
 
[dev-dependencies]
hex = "0.4"